# sms

./: CMakeLists.txt  Dockerfile  dependencies.sh  main.cpp
frontend/: index.html
